<resources>
    <string name="app_name">КонтекстФото</string>
    <string name="action_settings">Настройки</string>
    <string name="action_search_photo">Поиск по комментарию</string>
    <!-- Strings used for fragments for navigation -->
    <string name="albums">Альбомы</string>
    <string name="all_photos">Все фотографии</string>
    <string name="photo_comment">Комментарий</string>

    <string name="require_permissions_title">Требуются разрешения</string>
    <string name="require_permissions_message">Для работы приложения необходимо предоставить разрешения</string>
    <string name="pos_b">Ок</string>
    <string name="save">Сохранить</string>
    <string name="neg_b">Отмена</string>

    <string name="fullscreen_picture"></string>
    <string name="no_comment">Нет комментария</string>

    <string name="add_comment_title">Добавить комментарий</string>
    <string name="album_name">Имя альбома</string>
    <string name="search_photo_on_comment_fragment">Поиск по комментарию</string>
    <string name="rename">Переименовать</string>
    <string name="delete">Удалить</string>
    <string name="commentate">Комментировать</string>
    <string name="share">Поделиться</string>

    <string name="copy">Копировать</string>
    <string name="move">Переместить</string>
    <string name="to_album">В альбом</string>

    <string name="rename_album_text">Переименование альбома</string>
    <string name="create_album_text">Создание альбома</string>
    <string name="add_photo_dialog_title">Добавление фото</string>

    <string name="write_comment">Введите комментарий</string>
    <string name="check_register">Поиск с учётом регистра</string>
    <string name="cancel">Отмена</string>
    <!-- Тосты -->
    <string name="enter_name">Введите название</string>
    <string name="cant_rename_album">Невозможно переименовать альбом</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>