<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".dialogs.AddCommentDialogFragment"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_comment_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/comment_photo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="80"
        android:hint="@string/photo_comment"
        android:background="@drawable/blue_border"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_neg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neg_b"
        android:textColor="?attr/textColorAlertDialogListItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_photo_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@color/light_blue_600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_photo_text" />

</androidx.constraintlayout.widget.ConstraintLayout>