<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Dialogs.RenameAlbumDialogFragment"
    android:padding="16dp"
    android:gravity="center">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rename_album_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/album_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:maxLength="80"
        android:background="@drawable/blue_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView2">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_neg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:text="@string/neg_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue_600"
        android:text="@string/pos_b"
        app:layout_constraintBottom_toBottomOf="@+id/b_neg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/b_neg"></com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>